Started on Chapter 1

--- a/GRAVITATION-Notes/2-chapter-2.tex
+++ b/GRAVITATION-Notes/2-chapter-2.tex
@@ -1,4 +1,4 @@
-\section{Relativistic Quantum Mechanics}\label{sec:chapter2}
+\section{Foundations of Special Relativity}\label{sec:chapter2}
 
 \subsection{Quantum Mechanics}\label{susec:2_1}
 
