--- a/GRAVITATION-Notes/0-main.tex
+++ b/GRAVITATION-Notes/0-main.tex
@@ -90,10 +90,10 @@ floatfix,
 	
 	\maketitle
 	
-	\section{Introduction}\label{sec:introduction}
-	abc
+	%\thesection{Introduction}\label{sec:introduction}
 	
 	
+	\input{1-chapter-1.tex}
 	\input{2-chapter-2.tex}
 	\input{3-chapter-3.tex}
 	%\cleardoublepage
