--- a/GRAVITATION-Notes/3-chapter-3.tex
+++ b/GRAVITATION-Notes/3-chapter-3.tex
@@ -1,3 +1,3 @@
-\section{Scattering Theory}\label{sec:chapter3}
+\section{The Electromagnetic Field}\label{sec:chapter3}
 
 \subsection{"In" and "Out" States}\label{susec:3_1}
