Finished reading chapter 1

--- a/GRAVITATION-Notes/defs.sty
+++ b/GRAVITATION-Notes/defs.sty
@@ -15,6 +15,7 @@
 \newcommand*\chargeconjugate{\ensuremath{\mathsf{C}}}
 
 \newcommand*\cbox[1]{Box~\ensuremath{{#1}}}
+\newcommand*\exercise[1]{Exercise~\ensuremath{{#1}}}
 \newcommand*\reffig[1]{Fig.~\ref{fig:#1}}
 \newcommand*\crefeq[1]{Eq.~\ref{eq:#1}}
 \newcommand*\refsec[1]{Sect.~\ref{sec:#1}}
