--- a/GRAVITATION-Notes/1-chapter-1.tex
+++ b/GRAVITATION-Notes/1-chapter-1.tex
@@ -102,8 +102,48 @@ This because any part of the acceleration could be due to a gravitational field.
 \enquote{The geometry of spacetime is locally Lorentzian everywhere.}
 
 \subsection{Time}\label{susec:1_5}
+Time is defined so that motion looks simple.
 
 \subsection{Curvature}\label{susec:1_6}
+\subsubsection{\cbox{1.6} \page{32}}
+\paragraph{Figure C}
+The formula \[r=\dfrac{d^2}{8 a},\]
+where $r$ is the radius of curvature, $d$ is the \enquote{direct} distance between start and end point 
+and $a$ is the raise of the track of e.g. the ball, can be derived as follows:
+
+Denote by $\alpha$ the angle inscribed by the shown cone under consideration, then
+\begin{equation} 
+	\sin(\alpha)=\dfrac{d}{r} \label{eq:1_6_1}
+\end{equation}
+ Further denote by $x$ the distance between the center of curvature and the intersection point of the radial line at $\alpha/2$ with the \enquote{direct} line of connection between start and end point. Or in formulas \[x=r-a.\]
+ Then we know
+ \begin{align*} 
+ 	\cos(\dfrac{\alpha}{2})&=\dfrac{x}{r}\\
+	\Rightarrow a&=r-x\\
+	&=r\left(1-\cos(\dfrac{\alpha}{2})\right)\\
+	&\overset{\crefeq{1_6_1}}{\approx}r\left(1-\sqrt{1-\left(\dfrac{d}{2r}\right)^2}\right)\\
+	&\approx r\left(1-\left(1-\dfrac{d^2}{8r^2}\right)\right)\\
+	&=\dfrac{d^2}{8r}\\
+	\Rightarrow r &=\dfrac{d^2}{8a}
+ \end{align*}
+
+\subsubsection{\eq{1.13} \page{37}}
+The summation only happens over the spatial components i.e. $j$ because we are here considering $v\ll c$, such that the separation in the time coordinate is negligible.
+
 
 \subsection{Effect of Matter on Geometry}\label{susec:1_7}
+\subsubsection{\cbox{1.9} \page{38}}
+\paragraph{Galileo Galilei (1638)}
+What is meant here is uniform acceleration leading to
+\[s=\dfrac{1}{2}a t^2 \Rightarrow s \propto t^2.\]
+
+\subsubsection{\hint: GR only being valid for larger (average) scales? \page{42}}
+\enquote{the field equation shows how the stress-energy of matter generates an \emph{average} curvature in its neighborhood.}
+
+\subsection{Exercises}\label{susec:1_E}
+\subsubsection{\exercise{1.1} \page{44}}
+
+\subsubsection{\exercise{1.2} \page{44}}
+
+\subsubsection{\exercise{1.3} \page{44}}
 
