--- a/GRAVITATION-Notes/1-chapter-1.tex
+++ b/GRAVITATION-Notes/1-chapter-1.tex
@@ -142,8 +142,30 @@ What is meant here is uniform acceleration leading to
 
 \subsection{Exercises}\label{susec:1_E}
 \subsubsection{\exercise{1.1} \page{44}}
-
+By unrolling the cylinder it is obvious that geodesics, which are parallel at one point, are parallel at any other point, i.e. they suffer no geodesic deviation:
+\begin{align*} 
+	\derivative{^2\xi}{s^2}&=0\overset{\eq{1.6}}{=}-R\xi\\
+	\Rightarrow R&=0
+\end{align*}
+Given the formula \[R=\dfrac{1}{\varrho_1\varrho_2},\]
+where $\varrho_i$ are the principal radii of curvature at the point in question.
+We then get for a cylinder \[\varrho_1=\infty\qquad\varrho_2=r \quad\Rightarrow R=0,\]
+where $r$ is the radius of the cylinder in the 3-dimensional euclidean embedding space.
 \subsubsection{\exercise{1.2} \page{44}}
+Using \eq{1.14} the values in question can be calculated.
 
 \subsubsection{\exercise{1.3} \page{44}}
+First fix some notation:
+\begin{align*} 
+	M&=\text{Mass of satellite}\\
+	\omega&=\text{Angular frequency of satellite}\\
+	r&=\text{Radius of orbit of satellite}\\
+	m&=\text{Mass of central object}\\
+	\varrho_{\text{Kepler}}&=\dfrac{m}{\frac{4\pi}{3}r^3}=\text{Kepler density}
+\end{align*}
+By setting the centripetal acceleration of the satellite equal to the gravitational acceleration (in Newtonian mechanics), we get:
+\begin{align*} 
+	M\omega^2 r&= G\dfrac{m M}{r^2}\\
+	\Rightarrow \omega^2&=G\dfrac{m}{r^3}=\dfrac{4\pi G}{3}\varrho_{\text{Kepler}}
+\end{align*}
 
