--- a/GRAVITATION-Notes/1-chapter-1.tex
+++ b/GRAVITATION-Notes/1-chapter-1.tex
@@ -1,4 +1,4 @@
-\section{Geometrodynamics}\label{sec:chapter1}
+\section{Geometrodynamics in Brief}\label{sec:chapter1}
 
 
 \subsection{The parable of the apple}\label{susec:1_1}
@@ -18,7 +18,7 @@ Space tells matter how to move and matter tells space how to curve.
 
 \subsection{Weightlessness}\label{susec:1_3}
 \subsubsection{\cbox{1.2} \page{16}}
-\paragraph{Lorand von Eötvös}
+\paragraph{Lorand von Eötvös \page{16}}
 \begin{figure}[htb]
 	\centering
 	\begin{tikzpicture}
@@ -85,7 +85,7 @@ From this we get the northward directed part of $a_z$  to be
 
 \[a_z \cos(\theta)=\omega^2 R \sin(\theta)\cos(\theta).\]
 
-\paragraph{Beall}
+\paragraph{Beall \page{17}}
 We know the highest observed energies of the myon to be \[E_\mu = \SI{1e13}{\electronvolt}.\]
 While the upper threshold is mentioned to be \[E_{\text{thresh}}=\num{1e3} m c^2\].
 If now the myon were to be \enquote{too light} we would have \[E_\mu>E_{\text{thresh}}.\]
@@ -106,7 +106,7 @@ Time is defined so that motion looks simple.
 
 \subsection{Curvature}\label{susec:1_6}
 \subsubsection{\cbox{1.6} \page{32}}
-\paragraph{Figure C}
+\paragraph{Figure C \page{33}}
 The formula \[r=\dfrac{d^2}{8 a},\]
 where $r$ is the radius of curvature, $d$ is the \enquote{direct} distance between start and end point 
 and $a$ is the raise of the track of e.g. the ball, can be derived as follows:
@@ -140,7 +140,6 @@ What is meant here is uniform acceleration leading to
 \subsubsection{\hint: GR only being valid for larger (average) scales? \page{42}}
 \enquote{the field equation shows how the stress-energy of matter generates an \emph{average} curvature in its neighborhood.}
 
-\subsection{Exercises}\label{susec:1_E}
 \subsubsection{\exercise{1.1} \page{44}}
 By unrolling the cylinder it is obvious that geodesics, which are parallel at one point, are parallel at any other point, i.e. they suffer no geodesic deviation:
 \begin{align*} 
