--- a/GRAVITATION-Notes/defs.sty
+++ b/GRAVITATION-Notes/defs.sty
@@ -15,12 +15,15 @@
 \newcommand*\chargeconjugate{\ensuremath{\mathsf{C}}}
 
 \newcommand*\cbox[1]{Box~\ensuremath{{#1}}}
+\newcommand*\cfig[1]{Fig~\ensuremath{{#1}}}
 \newcommand*\exercise[1]{Exercise~\ensuremath{{#1}}}
 \newcommand*\reffig[1]{Fig.~\ref{fig:#1}}
 \newcommand*\crefeq[1]{Eq.~\ref{eq:#1}}
 \newcommand*\refsec[1]{Sect.~\ref{sec:#1}}
 \newcommand*\refsusec[1]{Sub Sect.~\ref{susec:#1}}
 \newcommand*\refsususec[1]{Sub Sub Sect.~\ref{sususec:#1}}
+
+\newcommand*\apply[2]{\ensuremath{\left\langle{#1},{#2}\right\rangle}}
 
 \newcommand*\hint{\colorbox{yellow}{Hint}}
 
